# DoTLMViz

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  index.html  mkdocs.yml  package-lock.json  package.json  pca.py  pyproject.toml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.svelte-kit/: ambient.d.ts
DoTLMViz/decomposition/: pca.py
docs/: index.md
docs/decomposition/: PCA.md
scripts/: clean.sh
src/: App.svelte
src/lib/: Barchart.svelte  Counter.svelte
